# kursein-bot

./: .gitignore  .replit  ANNOUNCEMENT.md  DISCORD_ANNOUNCEMENT.txt  JACKPOT_ANNOUNCEMENT.txt  bounties.json  bump_config.json  challenges.json  chips.json  chips_log.json  chips_log.json.backup  claim_reminders.json  claims.json  daily_transfers.json  db.py  guild_players.json  jackpot.json  jjk_data.json  jobs.json  karuta_cooldowns.json  loans.json  main.py  main_backup_casino.py  monthly_claims.json  pets.json  player_stats.json  pyproject.toml  pyrightconfig.json  reminders.json  replit.md  requirements.txt  rl_profiles.json  rl_ranks.json  rob_success_rate.json  secret_claims.json  shop_items.json  staff.json  streaks.json  streams_config.json  tickets.json  (+1 more)
